# Eco-Sys

./: .gitignore  CONTRIBUTING.md  Cargo.toml  MagneticConcreteEcosafetyPhoenix2026v1.csv  README.md  virta-git.config.json
AirGlobePlanningSafetySecurity/: CMakeLists.txt
AirGlobePlanningSafetySecurity/docs/: README.md
AirGlobePlanningSafetySecurity/include/: AirGlobeCoreConfig.hpp
AirGlobePlanningSafetySecurity/src/: DtTrustModel.cpp  DtTrustModel.hpp  EspdModel.cpp  EspdModel.hpp  KtsfModel.cpp  KtsfModel.hpp  MainDemo.cpp  ShardIo.cpp  ShardIo.hpp
code/lib/: core_ecokarma_operators_pseudocode_v1.0.md
config/: tempe_phoenix_nodes.csv
data-lake/eco-sys/: typewriter-journal.json
docs/: ARCHITECTURE.md
docs/architecture/: eco-sys-anchor-flow.mmd
docs/public/: faq_and_risks_v1.0.md  neural_freedom_ecological_accountability_whitepaper_v1.0.md
eco-lab-optimizer/src/: ecoOptimizer.js
ecosafety/cybernetic_machinery/simulators/: decomposition_simulator.rs
manifests/: eco-sys.aln.toml
mpc_constraints/: Cargo.toml
mpc_constraints/src/: bioscale_guard.rs  corridor.rs  lib.rs  lyapunov.rs
mpc_kernel/: Cargo.toml
mpc_kernel/src/: lib.rs  objective.rs  solver.rs  state.rs
mpc_runner/: Cargo.toml
mpc_runner/src/: lib.rs  runner.rs
qpudatashards/particles/: CyboquaticPhoenixEcosafety2026v1.csv  EcoImpactPredictionWindow2026v1.csv  EcoSkywalkPhoenixPrototype2026v1.csv  HydroMowerPhoenix2026v1.csv  LawnBiofuelPhoenix2026v1.csv  PhoenixMPC_WBGT_NeuroEco_2026v1.aln
src/: aln_anchor.rs  eco_core.rs  lib.rs  main.rs
src/hydromower/: mod.rs
src/lawnbiofuel/: mod.rs
(+1 files in other folders)
