[workspace]
members = [
    "contracts_core",      # existing or planned: corridorpresent/safestepinfra-style
    "mpc_kernel",
    "mpc_constraints",
    "mpc_runner",
    ".",                   # include the eco-sys crate at the workspace root
]

[package]
name = "eco-sys"
version = "1.0.0"
edition = "2021"
authors = ["Doctor0Evil <bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7>"]
license = "MIT"
description = "Environmental compliance and energy-aware orchestration layer for Virta-Sys and VSC-ARTEMIS"
resolver = "2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
ring = "0.17"
hex = "0.4"
toml = "0.8"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "virta-git"
path = "src/main.rs"

[lib]
name = "eco_sys"
path = "src/lib.rs"
